--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 API_URL = http://127.0.0.1:1337/api
+IMAGEN_URL = https:res.cloudinary.com/dhokyhiec/image/upload/v1692459662/cursos_bg_2109c8ffd3.jpg
